SSMP-110: Update personal information - Business to update user profile - Handle exception: Duplicated username, Gender parsing, Datetime parsing - Use StringUtils to validate blank/empty input